--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,7 @@ verify_ssl = true
 [dev-packages]
 pylint = "*"
 autopep8 = "*"
+rope = "*"
 
 [packages]
 django = "*"
@@ -26,6 +27,7 @@ gunicorn = "*"
 werkzeug = "*"
 pillow = "*"
 psycopg2 = "*"
+django-crispy-forms = "*"
 
 [requires]
 python_version = "3.8"
