Water Level Prediction Added.

--- a/Pipfile
+++ b/Pipfile
@@ -11,9 +11,7 @@ rope = "*"
 [packages]
 django = "*"
 djangorestframework = "*"
-markdown = "*"
 django-filter = "*"
-pygments = "*"
 django-guardian = "*"
 djoser = "*"
 djangorestframework-simplejwt = "*"
@@ -30,7 +28,6 @@ psycopg2 = "*"
 django-crispy-forms = "*"
 django-monthfield = "*"
 django-extensions = "*"
-keras = "*"
 numpy = "*"
 pandas = "*"
 sklearn = "*"
@@ -38,6 +35,8 @@ deap = "*"
 django-pandas = "*"
 django-model-utils = "*"
 scipy = "*"
+scikit-learn = "*"
+tensorflow = "*"
 
 [requires]
 python_version = "3.8"
