--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,9 @@ python-dotenv==0.14.0
 rope==0.17.0
 Werkzeug==1.0.1
 whitenoise==5.2.0
+PrettyTable==0.7.2
+scikit-learn==0.23.2
+deap==1.3.1
+ipython==7.18.1
+ipykernel==5.3.4
+seaborn==0.10.1
